--- a/arch/arm64/configs/merge_hi6250_defconfig
+++ b/arch/arm64/configs/merge_hi6250_defconfig
@@ -132,7 +132,7 @@ CONFIG_BOOST_KILL=y
 CONFIG_CGROUPS=y
 # CONFIG_CGROUP_DEBUG is not set
 CONFIG_CGROUP_FREEZER=y
-CONFIG_HW_CGROUP_PIDS=y
+CONFIG_HW_CGROUP_PIDS=n
 # CONFIG_CGROUP_PIDS is not set
 # CONFIG_HW_CGROUP_IONICE is not set
 CONFIG_CGROUP_IOLIMIT=y
