--- a/arch/arm64/configs/merge_hi6250_defconfig
+++ b/arch/arm64/configs/merge_hi6250_defconfig
@@ -534,7 +534,7 @@ CONFIG_HUAWEI_UNMOVABLE_ISOLATE2_SIZE_MBYTES=64
 # CONFIG_DEBUG_VMALLOC is not set
 CONFIG_SPECULATIVE_PAGE_FAULT=y
 CONFIG_HISI_MM=y
-CONFIG_HISI_SLOW_PATH_COUNT=y
+CONFIG_HISI_SLOW_PATH_COUNT=n
 # CONFIG_HISI_PMALLOC is not set
 CONFIG_SECCOMP=y
 # CONFIG_PARAVIRT is not set
@@ -5417,7 +5417,7 @@ CONFIG_HUAWEI_PROC_CHECK_ROOT=y
 #
 # Huawei root scanner
 #
-CONFIG_HW_ROOT_SCAN=y
+CONFIG_HW_ROOT_SCAN=n
 # CONFIG_HW_ROOT_SCAN_ENG_DEBUG is not set
 # CONFIG_HUAWEI_EIMA is not set
 # CONFIG_HW_DOUBLE_FREE_DYNAMIC_CHECK is not set
