--- a/drivers/devkit/tpkit/Makefile
+++ b/drivers/devkit/tpkit/Makefile
@@ -8,6 +8,7 @@ obj-$(CONFIG_HUAWEI_TS_KIT) += tpkits.o
 tpkits-objs += huawei_ts_kit_core.o huawei_ts_kit_fsnode.o huawei_ts_kit_api.o huawei_ts_kit_algo.o huawei_ts_kit_csvparse.o hisi_adapter/tpkit_platform_adapter.o
 EXTRA_CFLAGS += -Idrivers/hisi/tzdriver
 EXTRA_CFLAGS += -Idrivers/tzdriver
+EXTRA_CFLAGS += -Wno-error=incompatible-pointer-types
 endif
 
 ifeq ($(CONFIG_HUAWEI_DEVKIT_QCOM),y)
