--- a/drivers/devkit/tpkit/panel/synaptics/Makefile
+++ b/drivers/devkit/tpkit/panel/synaptics/Makefile
@@ -5,3 +5,4 @@ EXTRA_CFLAGS += -Iarch/arm/mach-hisi
 EXTRA_CFLAGS += -Idrivers/hisi/tzdriver
 EXTRA_CFLAGS += -Idrivers/tzdriver
 EXTRA_CFLAGS += -Idrivers/devkit/lcdkit/lcdkit1.0/core/common
+EXTRA_CFLAGS += -Wno-error=incompatible-pointer-types
