--- a/drivers/devkit/tpkit/panel/atmel/Makefile
+++ b/drivers/devkit/tpkit/panel/atmel/Makefile
@@ -3,3 +3,4 @@ atmel_ts-objs += atmel_main.o atmel_fw_update.o atmel_debug.o
 EXTRA_CFLAGS += -Iarch/arm/mach-hisi
 EXTRA_CFLAGS += -Idrivers/hisi/tzdriver
 EXTRA_CFLAGS += -Idrivers/tzdriver
+EXTRA_CFLAGS += -Wno-error=incompatible-pointer-types
