--- a/drivers/devkit/tpkit/panel/elan/Makefile
+++ b/drivers/devkit/tpkit/panel/elan/Makefile
@@ -3,3 +3,4 @@ obj-$(CONFIG_ELAN_TS_KIT) += elan_ts.o
 obj-$(CONFIG_ELAN_TS_KIT) += elan_mmi.o
 EXTRA_CFLAGS += -Idrivers/hisi/tzdriver
 EXTRA_CFLAGS += -Idrivers/tzdriver
+EXTRA_CFLAGS += -Wno-error=incompatible-pointer-types
