SOOOO MANY DERPS

--- a/drivers/hisi/slimbus/Makefile
+++ b/drivers/hisi/slimbus/Makefile
@@ -6,6 +6,7 @@ EXTRA_CFLAGS += -Idrivers/hisi/slimbus/vendor/candance/include
 EXTRA_CFLAGS +=	-Idrivers/hisi/slimbus/vendor/candance
 EXTRA_CFLAGS +=	-Isound/soc/hisilicon
 EXTRA_CFLAGS += -Idrivers/hisi/mntn/blackbox/platform_hifi/
+EXTRA_CFLAGS += -Idrivers/hisi/slimbus
 
 hisilicon-slimbus-platform-objs		:= vendor/candance/cps_bm.o vendor/candance/src/csmi.o vendor/candance/slimbus_drv.o
 hisilicon-slimbus-platform-objs		+= slimbus.o slimbus_utils.o slimbus_64xx.o slimbus_6403.o 
