--- a/drivers/hisi/tzdriver/Makefile
+++ b/drivers/hisi/tzdriver/Makefile
@@ -44,10 +44,10 @@ ifdef CONFIG_TEE_CFC
 endif
 
 ifdef CONFIG_IMAGINATION_D5500_DRM_VCODEC
-ifeq ($(wildcard drivers/staging/android/ion/ion.h),)
-  ccflags-y += -DIMG_KERNEL_ION_HEADER="<linux/ion.h>"
-else
+ifeq ($(wildcard include/linux/ion.h),)
   ccflags-y += -DIMG_KERNEL_ION_HEADER="<$(srctree)/drivers/staging/android/ion/ion.h>"
+else
+  ccflags-y += -DIMG_KERNEL_ION_HEADER="<linux/ion.h>"
 endif
   ccflags-y += -Idrivers/vcodec/imagination/D5500_DRM/imgvideo/platform/include
 endif
