--- a/drivers/huawei_platform/inputhub/hi6250/Makefile
+++ b/drivers/huawei_platform/inputhub/hi6250/Makefile
@@ -20,3 +20,5 @@ obj-$(CONFIG_INPUTHUB)  += sensor_sys_info.o
 #ifdef CONFIG_HISI_BB
 obj-$(CONFIG_INPUTHUB)  += rdr_sensorhub.o
 #endif
+
+ccflags-$(CONFIG_INPUTHUB)  += -w
