--- a/drivers/huawei_platform/ocp/Makefile
+++ b/drivers/huawei_platform/ocp/Makefile
@@ -5,3 +5,4 @@
 obj-$(CONFIG_HUAWEI_OCP)  += hw_ocp.o
 
 EXTRA_CFLAGS += -Idrivers/hisi/tzdriver/libhwsecurec
+EXTRA_CFLAGS += -Wno-error=incompatible-pointer-types
