--- a/arch/arm64/configs/merge_hi6250_defconfig
+++ b/arch/arm64/configs/merge_hi6250_defconfig
@@ -3846,11 +3846,11 @@ CONFIG_ION_OF=y
 # CONFIG_ION_HISI_DMA_POOL is not set
 CONFIG_ION_HISI_SECCM=y
 # CONFIG_ALLOC_MEM_SUPPORT_4GPLUS is not set
-CONFIG_HISI_SMARTPOOL_OPT=y
+CONFIG_HISI_SMARTPOOL_OPT=n
 # CONFIG_HISI_SPECIAL_SCENE_POOL is not set
 # CONFIG_FIQ_DEBUGGER is not set
 # CONFIG_FIQ_WATCHDOG is not set
-CONFIG_HW_LOGGER=y
+CONFIG_HW_LOGGER=n
 # CONFIG_STAGING_BOARD is not set
 # CONFIG_LTE_GDM724X is not set
 # CONFIG_LNET is not set
@@ -4820,7 +4820,7 @@ CONFIG_HW_BFMR_HISI=y
 # CONFIG_HW_BFMR_QCOM is not set
 # CONFIG_HW_BFMR_MTK is not set
 CONFIG_USE_BOOTFAIL_RECOVERY_SOLUTION=y
-CONFIG_HW_ZEROHUNG=y
+CONFIG_HW_ZEROHUNG=n
 CONFIG_HW_CGROUP_INFO=y
 CONFIG_HW_FDLEAK=y
 # CONFIG_HW_ERECOVERY is not set
