--- a/drivers/media/huawei/camera/hisp/hisp110/Makefile
+++ b/drivers/media/huawei/camera/hisp/hisp110/Makefile
@@ -3,5 +3,6 @@ EXTRA_CFLAGS += -DDEBUG_HISI_CAMERA
 endif
 ccflags-y += -Idrivers/media/huawei/camera/hisp
 ccflags-y += -Idrivers/media/huawei/camera
+ccflags-y += -Wno-error=incompatible-pointer-types
 
 obj-y += hisp110.o
