--- a/drivers/vcodec/imagination/D5500/encode/Makefile
+++ b/drivers/vcodec/imagination/D5500/encode/Makefile
@@ -46,6 +46,7 @@
 M ?= drivers/vcodec/imagination
 
 KBUILD_CFLAGS := $(filter-out -Werror,$(KBUILD_CFLAGS))
+KBUILD_CFLAGS += -Wno-error=incompatible-pointer-types
 
 ifeq ($(M),)
 $(error Set $$M to a correct value to represent your path, ex. M := $$(srctree)/drivers/staging/img/)
