--- a/drivers/connectivity/hi11xx/hi1102a/platform/Makefile
+++ b/drivers/connectivity/hi11xx/hi1102a/platform/Makefile
@@ -1,4 +1,4 @@
-HI1102_DRIVER_BUILTIN_PATH ?= $(subst ",,$(CONFIG_HI11XX_DRIVER_PATH))
+HI1102_DRIVER_BUILTIN_PATH ?= drivers/connectivity/hi11xx
 ANDROID_PLAT_DRIVER_FLODER = platform
 ANDROID_WIFI_DRIVER_FLODER = wifi
 PLAT_DRIVER_FLODER = platform
