--- a/drivers/connectivity/hi11xx/hi1103/platform/Makefile
+++ b/drivers/connectivity/hi11xx/hi1103/platform/Makefile
@@ -1,4 +1,4 @@
-HI110X_DRIVER_BUILTIN_PATH ?= $(subst ",,$(CONFIG_HI11XX_DRIVER_PATH))
+HI110X_DRIVER_BUILTIN_PATH ?= drivers/connectivity/hi11xx
 DRIVER_FLODER = platform
 
 export _PRE_PRODUCT_VERSION ?= 1103
