--- a/drivers/connectivity/hi11xx/hi1102a/wifi/Makefile
+++ b/drivers/connectivity/hi11xx/hi1102a/wifi/Makefile
@@ -1,4 +1,4 @@
-HI1102_DRIVER_BUILTIN_PATH ?= $(subst ",,$(CONFIG_HI11XX_DRIVER_PATH))
+HI1102_DRIVER_BUILTIN_PATH ?= drivers/connectivity/hi11xx
 $(warning HI1102_DRIVER_BUILTIN_PATH $(HI1102_DRIVER_BUILTIN_PATH))
 WIFI_DRIVER_FLODER =
 PLAT_DRIVER_FLODER = ../platform
