--- a/drivers/connectivity/hi11xx/hi1103/wifi/1103/Makefile
+++ b/drivers/connectivity/hi11xx/hi1103/wifi/1103/Makefile
@@ -1,4 +1,4 @@
-HI110X_DRIVER_BUILTIN_PATH ?= $(subst ",,$(CONFIG_HI11XX_DRIVER_PATH))
+HI110X_DRIVER_BUILTIN_PATH ?= drivers/connectivity/hi11xx
 $(warning HI110X_DRIVER_BUILTIN_PATH $(HI110X_DRIVER_BUILTIN_PATH))
 DRIVER_FLODER = wifi/1103
 export _PRE_PRODUCT_VERSION ?= 1103
