--- a/arch/arm64/configs/merge_hi6250_defconfig
+++ b/arch/arm64/configs/merge_hi6250_defconfig
@@ -48,7 +48,7 @@ CONFIG_CROSS_COMPILE=""
 # CONFIG_COMPILE_TEST is not set
 CONFIG_LOCALVERSION=""
 # CONFIG_LOCALVERSION_AUTO is not set
-CONFIG_DEFAULT_HOSTNAME="(none)"
+CONFIG_DEFAULT_HOSTNAME="hi6250"
 CONFIG_SWAP=y
 # CONFIG_SYSVIPC is not set
 # CONFIG_POSIX_MQUEUE is not set
@@ -260,7 +260,7 @@ CONFIG_GCC_PLUGINS=y
 # CONFIG_GCC_PLUGIN_RANDSTRUCT is not set
 # CONFIG_GCC_PLUGIN_STRUCTLEAK is not set
 # CONFIG_GCC_PLUGIN_CYC_COMPLEXITY is not set
-# CONFIG_GCC_PLUGIN_LATENT_ENTROPY is not set
+CONFIG_GCC_PLUGIN_LATENT_ENTROPY=y
 CONFIG_HAVE_CC_STACKPROTECTOR=y
 CONFIG_CC_STACKPROTECTOR=y
 # CONFIG_CC_STACKPROTECTOR_NONE is not set
@@ -572,9 +572,9 @@ CONFIG_RANDOMIZE_MODULE_REGION_FULL=y
 #
 # Boot options
 #
-CONFIG_CMDLINE="console=ttyAMA0"
-CONFIG_CMDLINE_FROM_BOOTLOADER=y
-# CONFIG_CMDLINE_EXTEND is not set
+CONFIG_CMDLINE="console=ttyAMA0 androidboot.verifiedbootstate=GREEN"
+# CONFIG_CMDLINE_FROM_BOOTLOADER is not set
+CONFIG_CMDLINE_EXTEND=y
 # CONFIG_CMDLINE_FORCE is not set
 # CONFIG_EFI is not set
 # CONFIG_BUILD_ARM64_APPENDED_DTB_IMAGE is not set
@@ -617,7 +617,7 @@ CONFIG_PM_CLK=y
 CONFIG_WQ_POWER_EFFICIENT_DEFAULT=y
 CONFIG_CPU_PM=y
 # CONFIG_PM_FAIL_DEBUG is not set
-CONFIG_HUAWEI_SLEEPLOG=y
+# CONFIG_HUAWEI_SLEEPLOG is not set
 CONFIG_ARCH_HIBERNATION_POSSIBLE=y
 CONFIG_ARCH_SUSPEND_POSSIBLE=y
 
@@ -656,21 +656,21 @@ CONFIG_CPU_FREQ_GOV_ATTR_SET=y
 CONFIG_CPU_FREQ_GOV_COMMON=y
 CONFIG_CPU_FREQ_STAT=y
 CONFIG_CPU_FREQ_STAT_DETAILS=y
-# CONFIG_CPU_FREQ_TIMES is not set
-CONFIG_CPU_FREQ_DEFAULT_GOV_PERFORMANCE=y
+CONFIG_CPU_FREQ_TIMES=y
+# CONFIG_CPU_FREQ_DEFAULT_GOV_PERFORMANCE is not set
 # CONFIG_CPU_FREQ_DEFAULT_GOV_POWERSAVE is not set
 # CONFIG_CPU_FREQ_DEFAULT_GOV_USERSPACE is not set
 # CONFIG_CPU_FREQ_DEFAULT_GOV_ONDEMAND is not set
 # CONFIG_CPU_FREQ_DEFAULT_GOV_CONSERVATIVE is not set
 # CONFIG_CPU_FREQ_DEFAULT_GOV_INTERACTIVE is not set
-# CONFIG_CPU_FREQ_DEFAULT_GOV_SCHEDUTIL is not set
+CONFIG_CPU_FREQ_DEFAULT_GOV_SCHEDUTIL=y
 CONFIG_CPU_FREQ_GOV_PERFORMANCE=y
 CONFIG_CPU_FREQ_GOV_POWERSAVE=y
 CONFIG_CPU_FREQ_GOV_USERSPACE=y
 CONFIG_CPU_FREQ_GOV_ONDEMAND=y
 CONFIG_CPU_FREQ_GOV_CONSERVATIVE=y
 CONFIG_CPU_FREQ_GOV_INTERACTIVE=y
-# CONFIG_CPU_FREQ_GOV_SCHEDUTIL is not set
+CONFIG_CPU_FREQ_GOV_SCHEDUTIL=y
 
 #
 # CPU frequency scaling drivers
@@ -680,13 +680,16 @@ CONFIG_CPUFREQ_DT_PLATDEV=y
 # CONFIG_ARM_BIG_LITTLE_CPUFREQ is not set
 # CONFIG_ARM_KIRKWOOD_CPUFREQ is not set
 CONFIG_HISI_CPUFREQ=y
-# CONFIG_ARCH_HISI_MAXFREQ is not set
-# CONFIG_HISI_ENABLE_GET_VAL is not set
+CONFIG_ARCH_HISI_MAXFREQ=y
+CONFIG_HISI_ENABLE_GET_VAL=y
+CONFIG_HISI_ENABLE_HPM_DATA_COLLECT=y
 CONFIG_HISI_BIG_MAXFREQ_HOTPLUG=y
 CONFIG_HISI_CPUFREQ_DT=y
 # CONFIG_HISI_CPUDDR_FREQ_LINK is not set
-# CONFIG_CPU_FREQ_POWER_STAT is not set
-# CONFIG_HISI_CPUFREQ_LOWTEMP is not set
+CONFIG_CPU_FREQ_POWER_STAT=y
+CONFIG_HISI_CPU_FREQ_GOV_SCHEDUTIL=y
+CONFIG_HISI_CPU_FREQ_LOCK_DETECT=y
+CONFIG_HISI_CPUFREQ_LOWTEMP=y
 CONFIG_NET=y
 CONFIG_COMPAT_NETLINK_MESSAGES=y
 CONFIG_NET_INGRESS=y
@@ -4274,7 +4277,7 @@ CONFIG_TEELOG=y
 # CONFIG_TEE_TUI is not set
 # CONFIG_TEE_TUI_ION is not set
 # CONFIG_TEE_TUI_ION_ADD is not set
-# CONFIG_TEE_TUI_FP is not set
+CONFIG_TEE_TUI_FP=y
 CONFIG_TEE_CPU_MIGRATION=y
 # CONFIG_HISI_SPI_SMC is not set
 # CONFIG_HISI_SPI1_SMC is not set
@@ -4421,7 +4424,7 @@ CONFIG_HW_IP_BASE_ADDR=y
 #
 # CONFIG_BALONG_ONOFF is not set
 CONFIG_BALONG_MODEM_ONOFF=y
-# CONFIG_EFUSE_BALONG is not set
+CONFIG_EFUSE_BALONG=y
 CONFIG_EFUSE_BALONG_AGENT=y
 
 #
@@ -4456,7 +4459,7 @@ CONFIG_SYNC_BALONG=y
 CONFIG_IPF_SUPPORT=y
 CONFIG_PSAM_SUPPORT=y
 # CONFIG_HISI_DUMP is not set
-# CONFIG_BALONG_EASY_SHELL is not set
+CONFIG_BALONG_EASY_SHELL=y
 CONFIG_PM_OM_BALONG=y
 CONFIG_PMIC_OCP=y
 CONFIG_HISI_SIM_HOTPLUG=y
@@ -4487,9 +4490,9 @@ CONFIG_HISI_TIMEKEEPER=y
 #
 # Hisi lowmem killer
 #
-CONFIG_HISI_LOWMEM=y
-CONFIG_HISI_LOWMEM_DBG=y
-CONFIG_HISI_MULTI_KILL=y
+CONFIG_HISI_LOWMEM=n
+CONFIG_HISI_LOWMEM_DBG=n
+CONFIG_HISI_MULTI_KILL=n
 
 #
 # Hisi lpm3_debug options
@@ -4515,7 +4518,7 @@ CONFIG_HISI_SECS_CTRL=y
 # Hisilicon ISP FD
 #
 # CONFIG_HISPFD is not set
-# CONFIG_HISI_ENGINEER_MODE is not set
+CONFIG_HISI_ENGINEER_MODE=y
 
 #
 # Hisilicon Performace Control
@@ -4523,7 +4526,7 @@ CONFIG_HISI_SECS_CTRL=y
 # CONFIG_HISI_PERF_CTRL is not set
 # CONFIG_HISI_DRG is not set
 CONFIG_HISI_DUMMY_KO=m
-# CONFIG_HISI_KERNEL_BL31_LOG is not set
+CONFIG_HISI_KERNEL_BL31_LOG=y
 
 #
 # NPU Drivers
@@ -4568,7 +4571,7 @@ CONFIG_CHR_NETLINK_MODULE=y
 # CONFIG_BCMCONNECTIVITY is not set
 CONFIG_HWCONNECTIVITY=y
 # CONFIG_HW_ABS is not set
-# CONFIG_HW_VOWIFI is not set
+CONFIG_HW_VOWIFI=y
 # CONFIG_HW_GET_EXT_SIG is not set
 # CONFIG_HW_GET_P2P_TX_RATE is not set
 CONFIG_HWGPS=y
@@ -4591,13 +4594,12 @@ CONFIG_HW_WIFI=y
 # CONFIG_HW_WIFI_RSSI is not set
 CONFIG_HUAWEI_MSS_AUTO_CHANGE=y
 CONFIG_HW_SYN_LINEAR_RETRY=y
-CONFIG_HW_NETFILTER_MODULE=y
+CONFIG_HW_NETFILTER_MODULE=n
 # CONFIG_HW_COMMSTAT is not set
 CONFIG_HW_QTAGUID_PID=y
 CONFIG_HW_DPIMARK_MODULE=y
 # CONFIG_HW_NETBOOSTER_MODULE is not set
 # CONFIG_APP_QOE_AI_PREDICT is not set
-# CONFIG_HW_HIDATA_HIMOS is not set
 
 #
 # Huawei Bastet Support
@@ -4666,10 +4668,10 @@ CONFIG_HUAWEI_USB_SHORT_CIRCUIT_PROTECT=y
 # CONFIG_HUAWEI_LP8758 is not set
 # CONFIG_HI6422V100 is not set
 # CONFIG_HI6422V200 is not set
-# CONFIG_HUAWEI_WATER_CHECK is not set
+CONFIG_HUAWEI_WATER_CHECK=y
 # CONFIG_BUCKBOOST is not set
 # CONFIG_HUAWEI_FEATURE_PRINT_PID_NAME is not set
-CONFIG_DOZE_FILTER=y
+CONFIG_DOZE_FILTER=n
 CONFIG_HW_STRICT_RST=y
 # CONFIG_BOOST_5V is not set
 # CONFIG_HUAWEI_BATT_ACR_DETECT is not set
@@ -4695,16 +4697,16 @@ CONFIG_SYNAPTICS_LCD_TYPE=y
 # CONFIG_HW_NOVATEK_TS is not set
 # CONFIG_ST_TS is not set
 CONFIG_HUAWEI_TP_COLOR_INFO=y
-# CONFIG_VIE_TOUCH_FW is not set
-# CONFIG_EVA_TOUCH_FW is not set
-# CONFIG_NEXT_TOUCH_FW is not set
-# CONFIG_KNIGHT_TOUCH_FW is not set
+CONFIG_VIE_TOUCH_FW=y
+CONFIG_EVA_TOUCH_FW=y
+CONFIG_NEXT_TOUCH_FW=y
+CONFIG_KNIGHT_TOUCH_FW=y
 CONFIG_NEMO_TOUCH_FW=y
 CONFIG_VENUS_TOUCH_FW=y
-# CONFIG_FRD_TOUCH_FW is not set
-# CONFIG_EDISON_TOUCH_FW is not set
-# CONFIG_BTV_TOUCH_FW is not set
-# CONFIG_NATASHA_TOUCH_FW is not set
+CONFIG_FRD_TOUCH_FW
+CONFIG_EDISON_TOUCH_FW
+CONFIG_BTV_TOUCH_FW
+CONFIG_NATASHA_TOUCH_FW
 # CONFIG_HW_RL_TOUCH_KEY is not set
 # CONFIG_HW_PLAY_KEY is not set
 # CONFIG_HUAWEI_UID_IO_STATS is not set
@@ -4730,14 +4732,14 @@ CONFIG_USB_PD_VBUS_PRESENT_TOUT=20
 CONFIG_OTG_GPIO_ID=y
 CONFIG_OTG_DUAL_ROLE=y
 CONFIG_POGO_PIN=y
-# CONFIG_HUAWEI_USB is not set
+CONFIG_HUAWEI_USB=y
 # CONFIG_HUAWEI_YCABLE is not set
 # CONFIG_HUAWEI_HISHOW is not set
 # CONFIG_HW_SW_DEVICES is not set
 # CONFIG_SUPERSWITCH is not set
 # CONFIG_HW_VOLTAGE_DETECTION is not set
 CONFIG_ANTENNA_BOARDID_GPIO_DETECT=y
-# CONFIG_HUAWEI_VIBRATOR is not set
+CONFIG_HUAWEI_VIBRATOR=y
 # CONFIG_DRV2605 is not set
 # CONFIG_CLASSD_VIBRATOR is not set
 CONFIG_HUAWEI_OCP=y
@@ -4762,23 +4764,20 @@ CONFIG_HUAWEI_XENGINE=y
 CONFIG_HUAWEI_VENDOR_EXCEPTION=y
 # CONFIG_HWAA is not set
 CONFIG_HUAWEI_DSM=y
-CONFIG_HUAWEI_SDCARD_VOLD=y
+# CONFIG_HUAWEI_SDCARD_VOLD is not set
 # CONFIG_HUAWEI_DATA_ACQUISITION is not set
 # CONFIG_HUAWEI_WPA_DMD is not set
 
 #
 # Logger extend configuration
 #
-CONFIG_LOGGER_EXTEND=y
-CONFIG_LOG_EXCEPTION=y
-CONFIG_LOG_JANK=y
-CONFIG_HWLOG_KERNEL=y
-CONFIG_HIVIEW_SELINUX=y
+CONFIG_LOGGER_EXTEND=n
+CONFIG_HIVIEW_SELINUX=n
 CONFIG_CONNECTIVITY_HI110X=y
 CONFIG_CONNECTIVITY_HI1102=y
-# CONFIG_CONNECTIVITY_HI11XX is not set
-CONFIG_HI110X_DRIVER_PATH="drivers/connectivity/hisi"
-CONFIG_HI11XX_DRIVER_PATH="drivers/connectivity/hi11xx"
+CONFIG_CONNECTIVITY_HI11XX=y
+# CONFIG_HI110X_DRIVER_PATH is broken
+# CONFIG_HI11XX_DRIVER_PATH is broken
 CONFIG_HI110X_GPS_REFCLK=y
 CONFIG_HI110X_GPS_REFCLK_INTERFACE=y
 # CONFIG_HI110X_GPS_REFCLK_SRC_1 is not set
@@ -4819,13 +4818,13 @@ CONFIG_HUAWEI_BFM=y
 CONFIG_HW_BFMR_HISI=y
 # CONFIG_HW_BFMR_QCOM is not set
 # CONFIG_HW_BFMR_MTK is not set
-CONFIG_USE_BOOTFAIL_RECOVERY_SOLUTION=y
+# CONFIG_USE_BOOTFAIL_RECOVERY_SOLUTION is not set
 CONFIG_HW_ZEROHUNG=y
 CONFIG_HW_CGROUP_INFO=y
 CONFIG_HW_FDLEAK=y
 # CONFIG_HW_ERECOVERY is not set
-CONFIG_HW_WIFIPRO=y
-CONFIG_HW_WIFIPRO_PROC=y
+# CONFIG_HW_WIFIPRO is not set
+# CONFIG_HW_WIFIPRO_PROC is not set
 # CONFIG_WIFI_DELAY_STATISTIC is not set
 # CONFIG_HW_SNIFFER is not set
 CONFIG_AUDIOKIT=y
@@ -4834,11 +4833,11 @@ CONFIG_HUAWEI_DEVICEBOX_AUDIO=y
 CONFIG_HUAWEI_SMARTPAKIT_AUDIO=y
 # CONFIG_HISI_SPMI is not set
 CONFIG_LCDKIT_DRIVER=y
-# CONFIG_LCD_KIT_DRIVER is not set
-# CONFIG_LCD_KIT_COMMON is not set
-# CONFIG_LCD_KIT_HISI is not set
+CONFIG_LCD_KIT_DRIVER=y
+CONFIG_LCD_KIT_COMMON=y
+CONFIG_LCD_KIT_HISI=y
 # CONFIG_LCD_KIT_MTK is not set
-# CONFIG_HUAWEI_HOST_TS_KIT is not set
+CONFIG_HUAWEI_HOST_TS_KIT=y
 CONFIG_HUAWEI_TS_KIT=y
 # CONFIG_HUAWEI_TS_KIT_TEST is not set
 CONFIG_HUAWEI_TS_KIT_COMMON=y
@@ -4894,7 +4893,7 @@ CONFIG_HUAWEI_TP_KIT_COLOR_INFO=y
 #
 # Huawei Device Usage Big-data Analytics Initiative Support
 #
-CONFIG_HUAWEI_DUBAI=y
+CONFIG_HUAWEI_DUBAI=n
 CONFIG_HW_CPULOAD_NOTI=y
 CONFIG_HW_MEMORY_MONITOR=y
 CONFIG_HUAWEI_CFI_TAG=0x0035c000
@@ -4904,9 +4903,7 @@ CONFIG_HUAWEI_STORAGE_ROFA=y
 CONFIG_HUAWEI_STORAGE_ROCHK=y
 CONFIG_HUAWEI_DYNAMIC_BRD=y
 CONFIG_HUAWEI_STORAGE_ROW=y
-CONFIG_OASES=y
-CONFIG_OASES_SIGNATURE_SUPPORT=y
-CONFIG_OASES_STATIC_PLTS=y
+CONFIG_OASES=n
 
 #
 # Firmware Drivers
