--- a/arch/arm64/configs/merge_hi6250_defconfig
+++ b/arch/arm64/configs/merge_hi6250_defconfig
@@ -260,7 +260,7 @@ CONFIG_GCC_PLUGINS=y
 # CONFIG_GCC_PLUGIN_RANDSTRUCT is not set
 # CONFIG_GCC_PLUGIN_STRUCTLEAK is not set
 # CONFIG_GCC_PLUGIN_CYC_COMPLEXITY is not set
-CONFIG_GCC_PLUGIN_LATENT_ENTROPY=y
+# CONFIG_GCC_PLUGIN_LATENT_ENTROPY is not set
 CONFIG_HAVE_CC_STACKPROTECTOR=y
 CONFIG_CC_STACKPROTECTOR=y
 # CONFIG_CC_STACKPROTECTOR_NONE is not set
@@ -617,7 +617,7 @@ CONFIG_PM_CLK=y
 CONFIG_WQ_POWER_EFFICIENT_DEFAULT=y
 CONFIG_CPU_PM=y
 # CONFIG_PM_FAIL_DEBUG is not set
-# CONFIG_HUAWEI_SLEEPLOG is not set
+CONFIG_HUAWEI_SLEEPLOG=y
 CONFIG_ARCH_HIBERNATION_POSSIBLE=y
 CONFIG_ARCH_SUSPEND_POSSIBLE=y
 
@@ -662,15 +662,15 @@ CONFIG_CPU_FREQ_TIMES=y
 # CONFIG_CPU_FREQ_DEFAULT_GOV_USERSPACE is not set
 # CONFIG_CPU_FREQ_DEFAULT_GOV_ONDEMAND is not set
 # CONFIG_CPU_FREQ_DEFAULT_GOV_CONSERVATIVE is not set
-# CONFIG_CPU_FREQ_DEFAULT_GOV_INTERACTIVE is not set
-CONFIG_CPU_FREQ_DEFAULT_GOV_SCHEDUTIL=y
+CONFIG_CPU_FREQ_DEFAULT_GOV_INTERACTIVE=y
+# CONFIG_CPU_FREQ_DEFAULT_GOV_SCHEDUTIL is not set
 CONFIG_CPU_FREQ_GOV_PERFORMANCE=y
 CONFIG_CPU_FREQ_GOV_POWERSAVE=y
 CONFIG_CPU_FREQ_GOV_USERSPACE=y
 CONFIG_CPU_FREQ_GOV_ONDEMAND=y
 CONFIG_CPU_FREQ_GOV_CONSERVATIVE=y
 CONFIG_CPU_FREQ_GOV_INTERACTIVE=y
-CONFIG_CPU_FREQ_GOV_SCHEDUTIL=y
+# CONFIG_CPU_FREQ_GOV_SCHEDUTIL is not set
 
 #
 # CPU frequency scaling drivers
@@ -680,16 +680,14 @@ CONFIG_CPUFREQ_DT_PLATDEV=y
 # CONFIG_ARM_BIG_LITTLE_CPUFREQ is not set
 # CONFIG_ARM_KIRKWOOD_CPUFREQ is not set
 CONFIG_HISI_CPUFREQ=y
-CONFIG_ARCH_HISI_MAXFREQ=y
-CONFIG_HISI_ENABLE_GET_VAL=y
-CONFIG_HISI_ENABLE_HPM_DATA_COLLECT=y
+# CONFIG_ARCH_HISI_MAXFREQ is not set
+# CONFIG_HISI_ENABLE_GET_VAL is not set
+# CONFIG_HISI_ENABLE_HPM_DATA_COLLECT is not set
 CONFIG_HISI_BIG_MAXFREQ_HOTPLUG=y
 CONFIG_HISI_CPUFREQ_DT=y
 # CONFIG_HISI_CPUDDR_FREQ_LINK is not set
-CONFIG_CPU_FREQ_POWER_STAT=y
-CONFIG_HISI_CPU_FREQ_GOV_SCHEDUTIL=y
-CONFIG_HISI_CPU_FREQ_LOCK_DETECT=y
-CONFIG_HISI_CPUFREQ_LOWTEMP=y
+# CONFIG_CPU_FREQ_POWER_STAT is not set
+# CONFIG_HISI_CPUFREQ_LOWTEMP is not set
 CONFIG_NET=y
 CONFIG_COMPAT_NETLINK_MESSAGES=y
 CONFIG_NET_INGRESS=y
@@ -4277,7 +4275,7 @@ CONFIG_TEELOG=y
 # CONFIG_TEE_TUI is not set
 # CONFIG_TEE_TUI_ION is not set
 # CONFIG_TEE_TUI_ION_ADD is not set
-CONFIG_TEE_TUI_FP=y
+# CONFIG_TEE_TUI_FP is not set
 CONFIG_TEE_CPU_MIGRATION=y
 # CONFIG_HISI_SPI_SMC is not set
 # CONFIG_HISI_SPI1_SMC is not set
@@ -4424,7 +4422,7 @@ CONFIG_HW_IP_BASE_ADDR=y
 #
 # CONFIG_BALONG_ONOFF is not set
 CONFIG_BALONG_MODEM_ONOFF=y
-CONFIG_EFUSE_BALONG=y
+# CONFIG_EFUSE_BALONG is not set
 CONFIG_EFUSE_BALONG_AGENT=y
 
 #
@@ -4518,7 +4516,7 @@ CONFIG_HISI_SECS_CTRL=y
 # Hisilicon ISP FD
 #
 # CONFIG_HISPFD is not set
-CONFIG_HISI_ENGINEER_MODE=y
+# CONFIG_HISI_ENGINEER_MODE is not set
 
 #
 # Hisilicon Performace Control
@@ -4526,7 +4524,7 @@ CONFIG_HISI_ENGINEER_MODE=y
 # CONFIG_HISI_PERF_CTRL is not set
 # CONFIG_HISI_DRG is not set
 CONFIG_HISI_DUMMY_KO=m
-CONFIG_HISI_KERNEL_BL31_LOG=y
+# CONFIG_HISI_KERNEL_BL31_LOG is not set
 
 #
 # NPU Drivers
@@ -4571,7 +4569,7 @@ CONFIG_CHR_NETLINK_MODULE=y
 # CONFIG_BCMCONNECTIVITY is not set
 CONFIG_HWCONNECTIVITY=y
 # CONFIG_HW_ABS is not set
-CONFIG_HW_VOWIFI=y
+# CONFIG_HW_VOWIFI is not set
 # CONFIG_HW_GET_EXT_SIG is not set
 # CONFIG_HW_GET_P2P_TX_RATE is not set
 CONFIG_HWGPS=y
@@ -4822,7 +4820,6 @@ CONFIG_HW_BFMR_HISI=y
 CONFIG_HW_ZEROHUNG=y
 CONFIG_HW_CGROUP_INFO=y
 CONFIG_HW_FDLEAK=y
-# CONFIG_HW_ERECOVERY is not set
 # CONFIG_HW_WIFIPRO is not set
 # CONFIG_HW_WIFIPRO_PROC is not set
 # CONFIG_WIFI_DELAY_STATISTIC is not set
@@ -4833,11 +4830,11 @@ CONFIG_HUAWEI_DEVICEBOX_AUDIO=y
 CONFIG_HUAWEI_SMARTPAKIT_AUDIO=y
 # CONFIG_HISI_SPMI is not set
 CONFIG_LCDKIT_DRIVER=y
-CONFIG_LCD_KIT_DRIVER=y
-CONFIG_LCD_KIT_COMMON=y
-CONFIG_LCD_KIT_HISI=y
+# CONFIG_LCD_KIT_DRIVER is not set
+# CONFIG_LCD_KIT_COMMON is not set
+# CONFIG_LCD_KIT_HISI is not set
 # CONFIG_LCD_KIT_MTK is not set
-CONFIG_HUAWEI_HOST_TS_KIT=y
+# CONFIG_HUAWEI_HOST_TS_KIT is not set
 CONFIG_HUAWEI_TS_KIT=y
 # CONFIG_HUAWEI_TS_KIT_TEST is not set
 CONFIG_HUAWEI_TS_KIT_COMMON=y
