--- a/arch/arm64/configs/merge_hi6250_defconfig
+++ b/arch/arm64/configs/merge_hi6250_defconfig
@@ -1396,7 +1396,7 @@ CONFIG_BLK_DEV_RAM_SIZE=8192
 # CONFIG_USB_SWITCH_FSA9480 is not set
 # CONFIG_LATTICE_ECP3_CONFIG is not set
 # CONFIG_SRAM is not set
-CONFIG_UID_SYS_STATS=y
+CONFIG_UID_SYS_STATS=n
 # CONFIG_UID_SYS_STATS_DEBUG is not set
 CONFIG_MEMORY_STATE_TIME=y
 # CONFIG_C2PORT is not set
@@ -4595,7 +4595,7 @@ CONFIG_HW_SYN_LINEAR_RETRY=y
 CONFIG_HW_NETFILTER_MODULE=n
 # CONFIG_HW_COMMSTAT is not set
 CONFIG_HW_QTAGUID_PID=y
-CONFIG_HW_DPIMARK_MODULE=y
+CONFIG_HW_DPIMARK_MODULE=n
 # CONFIG_HW_NETBOOSTER_MODULE is not set
 # CONFIG_APP_QOE_AI_PREDICT is not set
 
@@ -4817,9 +4817,9 @@ CONFIG_HW_BFMR_HISI=y
 # CONFIG_HW_BFMR_QCOM is not set
 # CONFIG_HW_BFMR_MTK is not set
 # CONFIG_USE_BOOTFAIL_RECOVERY_SOLUTION is not set
-CONFIG_HW_ZEROHUNG=y
+CONFIG_HW_ZEROHUNG=n
 CONFIG_HW_CGROUP_INFO=y
-CONFIG_HW_FDLEAK=y
+CONFIG_HW_FDLEAK=n
 # CONFIG_HW_WIFIPRO is not set
 # CONFIG_HW_WIFIPRO_PROC is not set
 # CONFIG_WIFI_DELAY_STATISTIC is not set
@@ -4892,7 +4892,7 @@ CONFIG_HUAWEI_TP_KIT_COLOR_INFO=y
 #
 CONFIG_HUAWEI_DUBAI=n
 CONFIG_HW_CPULOAD_NOTI=y
-CONFIG_HW_MEMORY_MONITOR=y
+CONFIG_HW_MEMORY_MONITOR=n
 CONFIG_HUAWEI_CFI_TAG=0x0035c000
 # CONFIG_HUAWEI_CFI is not set
 # CONFIG_HUAWEI_CFI_DEBUG is not set
@@ -5205,8 +5205,8 @@ CONFIG_LOCKUP_DETECTOR=y
 # CONFIG_BOOTPARAM_SOFTLOCKUP_PANIC is not set
 CONFIG_BOOTPARAM_SOFTLOCKUP_PANIC_VALUE=0
 CONFIG_HW_DIE_CATCH=y
-CONFIG_DETECT_HUNG_TASK=y
-CONFIG_DETECT_HUAWEI_HUNG_TASK=y
+CONFIG_DETECT_HUNG_TASK=n
+CONFIG_DETECT_HUAWEI_HUNG_TASK=n
 CONFIG_DEFAULT_HUNG_TASK_TIMEOUT=120
 # CONFIG_BOOTPARAM_HUNG_TASK_PANIC is not set
 CONFIG_BOOTPARAM_HUNG_TASK_PANIC_VALUE=0
