--- a/drivers/Makefile
+++ b/drivers/Makefile
@@ -198,11 +198,11 @@ obj-$(CONFIG_HUAWEI_PLATFORM) += huawei_platform/
 obj-$(CONFIG_HUAWEI_DSM)        += dsm/
 obj-$(CONFIG_HUAWEI_WPA_DMD) += wpa_dmd/
 obj-$(CONFIG_CONNECTIVITY_HI110X) += connectivity/
-obj-$(CONFIG_LOGGER_EXTEND) += log/
 obj-$(CONFIG_CONTEXTHUB)        += contexthub/
 obj-$(CONFIG_HW_GADGET) += hwusb/
 obj-$(CONFIG_HUAWEI_BFM) += hwbfm/
-obj-$(CONFIG_HW_ZEROHUNG) += hwzerohung/
+#obj-$(CONFIG_HW_ZEROHUNG) += hwzerohung/
+obj-y += hwzerohungshim/
 obj-$(CONFIG_HW_FDLEAK) += hwfdleak/
 obj-$(CONFIG_HW_ERECOVERY) += hwerecovery/
 obj-$(CONFIG_HW_WIFI)       += hwnet/
