Permissive selinux (because i personally want it for debugging) and tweak config

--- a/arch/arm64/configs/merge_hi6250_defconfig
+++ b/arch/arm64/configs/merge_hi6250_defconfig
@@ -5370,9 +5370,9 @@ CONFIG_HISI_HARDENED_USERCOPY_REPLACE_DIVISION=y
 CONFIG_SECURITY_SELINUX=y
 # CONFIG_SECURITY_SELINUX_BOOTPARAM is not set
 # CONFIG_SECURITY_SELINUX_DISABLE is not set
-# CONFIG_SECURITY_SELINUX_DEVELOP is not set
-CONFIG_SECURITY_SELINUX_AVC_STATS=y
-CONFIG_SECURITY_SELINUX_CHECKREQPROT_VALUE=1
+CONFIG_SECURITY_SELINUX_DEVELOP=y
+# CONFIG_SECURITY_SELINUX_AVC_STATS is not set
+# CONFIG_SECURITY_SELINUX_CHECKREQPROT_VALUE is not set
 # CONFIG_HISI_SELINUX_EBITMAP_RO is not set
 # CONFIG_HISI_SELINUX_PROT is not set
 # CONFIG_SECURITY_SMACK is not set
@@ -5390,7 +5390,7 @@ CONFIG_DEFAULT_SECURITY="selinux"
 # Huawei kernel mdpp selftest
 #
 # CONFIG_HUAWEI_CRYPTO_TEST_MDPP is not set
-CONFIG_HUAWEI_SELINUX_DSM=y
+# CONFIG_HUAWEI_SELINUX_DSM is not set
 
 #
 # Huawei Kernel Harden
@@ -5400,13 +5400,13 @@ CONFIG_HUAWEI_SELINUX_DSM=y
 # CONFIG_HUAWEI_KERNEL_STACK_NX is not set
 # CONFIG_HUAWEI_KERNEL_MODULE_RANDOMIZE is not set
 # CONFIG_HUAWEI_KASLR_DEBUGFS is not set
-CONFIG_HUAWEI_HIDESYMS=y
+# CONFIG_HUAWEI_HIDESYMS is not set
 # CONFIG_HUAWEI_HIDESYMS_DEBUGFS is not set
 # CONFIG_HW_SLUB_SANITIZE is not set
 # CONFIG_HUAWEI_DOUBLE_FREE_CHECK_DEBUGFS is not set
 # CONFIG_HUAWEI_HARDEN_DOUBLE_FREE_CHECK_DEBUGFS is not set
 # CONFIG_HUAWEI_FREELIST_RANDOM_DEBUGFS is not set
-CONFIG_HUAWEI_PROC_CHECK_ROOT=y
+# CONFIG_HUAWEI_PROC_CHECK_ROOT is not set
 
 #
 # Huawei root scanner
