Disable some more huawei "optimizations"

--- a/arch/arm64/configs/merge_hi6250_defconfig
+++ b/arch/arm64/configs/merge_hi6250_defconfig
@@ -377,8 +377,8 @@ CONFIG_ARCH_SUPPORTS_ATOMIC_RMW=y
 CONFIG_MUTEX_SPIN_ON_OWNER=y
 CONFIG_RWSEM_SPIN_ON_OWNER=y
 CONFIG_LOCK_SPIN_ON_OWNER=y
-CONFIG_HW_VIP_THREAD=y
-CONFIG_HW_NETWORK_AWARE=y
+# CONFIG_HW_VIP_THREAD is not set
+# CONFIG_HW_NETWORK_AWARE is not set
 # CONFIG_HW_IAWARE_THREAD_BOOST is not set
 CONFIG_SCHED_HISI_FORCE_CMP_BACKUP=y
 CONFIG_FREEZER=y
